# jobpilot

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  main.py  models.py  scheduler.py
backend/: .env.example  pyproject.toml
backend/app/: config.py  controls.py  db.py  main.py  models.py
backend/app/discovery/: adzuna.py  base.py  career_pages.py  greenhouse.py  linkedin.py  remotive.py  themuse.py  util.py
backend/app/llm/: answers.py  client.py  ranking.py  score_cache.py
backend/app/pipeline/: ingest.py  orchestrator.py  submit.py
backend/app/resume/: parse.py
backend/app/resume/templates/: resume.html
backend/app/submit/: ashby_assist.py  assist_session.py  base.py  detect.py  greenhouse_api.py
backend/app/web/: api.py  applications.py  assist_ws.py  jobs.py  matches.py  pipeline.py  settings.py  setup.py  summary.py
backend/app/web/templates/: _assist_live.html  applications.html  base.html  dashboard.html  jobs_grid.html  matches.html  pipeline.html  pipeline_status.html  settings.html  setup.html  summary.html
backend/config/: preferences.example.yaml
backend/tests/: conftest.py  test_phase0_scaffold.py  test_phase11_apply.py  test_phase12_answers.py  test_phase14_assist.py  test_phase1_setup.py  test_phase2_discovery.py  test_phase3_ranking.py  test_phase6_orchestrator.py  test_phase7_reporting.py  test_phase8_career_pages.py  test_phase9_aggregators.py
config/: preferences.example.yaml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+48 files in other folders)
