[project]
name = "job-applier-agent"
version = "0.1.0"
description = "Autonomous AI job application agent: discover, rank, tailor, and submit job applications."
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.26",
    "playwright>=1.48",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "apscheduler>=3.10",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "jinja2>=3.1",
    "rapidfuzz>=3.10",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fpdf2>=2.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
